test/error/OpAddStringBool.fu
public static class Test
{
	public static bool Run()
	{
		bool b = true;
		string() s = "b=" + b; //ERROR: Cannot convert 'bool' to 'string'
		return b;
	}
}
